<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.arenx.foodieandroid.AddPhotoActivity"
    android:background="#ffffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_small"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/photoCommentEditText"
                android:hint="@string/hint_photo_comment"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/area_divide_height"
            android:background="@color/area_divide"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/location"
                android:adjustViewBounds="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationNameEditText"
                    android:hint="@string/hint_location_name"
                    android:background="#FFFFFF"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationNameTextView"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/locationCandidateListLinearLayoutWarper">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/locationCandidateListScrollView"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/locationCandidateListLinearLayout"
                            android:orientation="vertical">

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/food_icon_png"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dishNameEditText"
                    android:hint="@string/hint_dish_name"
                    android:background="#FFFFFF"
                    android:singleLine="true"
                    android:enabled="false"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dishNameTextView"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/input_location_first"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/dishCandidateListLinearLayoutWarper">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/dishCandidateListScrollView"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/dishCandidateListLinearLayout"
                            android:orientation="vertical">

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/dollar"
                android:adjustViewBounds="true"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_price_name"
                    android:id="@+id/priceNumberEditText"
                    android:background="#FFFFFF"
                    android:singleLine="true"
                    android:enabled="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceNumberTextView"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/input_dish_first"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/priceCandidateListLinearLayoutWarper">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/priceCandidateListScrollView"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/priceCandidateListLinearLayout"
                            android:orientation="vertical">

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Workaround to let other TextView with right color"
            android:id="@+id/workaround_textAppearanceMedium"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Workaround to let other TextView with right color"
            android:id="@+id/workaround_textAppearanceSmall"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
